unpackaged/main/default/objects/Linked_General_Preference__c/Linked_General_Preference__c.object-meta.xml
<CustomObject>
    <label>Linked General Preference</label>
    <nameField>
        <displayFormat>LGP-{0}</displayFormat>
        <label>Linked General Preference #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Linked General Preferences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>