unpackaged/main/default/objects/Linked_General_Preference__c/fields/Link_General_Preference_To__c.field-meta.xml
<CustomField>
    <fullName>Link_General_Preference_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Link General Preference To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Linked General Preferences</relationshipLabel>
    <relationshipName>Linked_General_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>