unpackaged/main/default/objects/Linked_General_Preference__c/fields/Linked_General_Preference__c.field-meta.xml
<CustomField>
    <fullName>Linked_General_Preference__c</fullName>
    <formula>HYPERLINK('/' + Linked_General_Preference_From__c, Linked_General_Preference_From__r.Name) &amp; ' &lt;-&gt; ' &amp; HYPERLINK('/' + Linked_General_Preference_To__c, Linked_General_Preference_To__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked General Preference</label>
    <type>Text</type>
</CustomField>