unpackaged/main/default/objects/Linked_General_Preference__c/fields/Linked_General_Preference_From__c.field-meta.xml
<CustomField>
    <fullName>Linked_General_Preference_From__c</fullName>
    <label>Linked General Preference From</label>
    <referenceTo>General_Preferences__c</referenceTo>
    <relationshipLabel>Linked General Preferences (From)</relationshipLabel>
    <relationshipName>Linked_General_Preferences_From</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>