unpackaged/main/default/objects/Linked_General_Preference__c/fields/Linked_General_Preference_To__c.field-meta.xml
<CustomField>
    <fullName>Linked_General_Preference_To__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <inlineHelpText>This general preference will initially be synced to the general preference selected here. Then they will be synced up whenever either general preference is updated.</inlineHelpText>
    <label>Linked General Preference To</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>notEqual</operation>
            <valueField>$Source.Linked_General_Preference_From__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>General_Preferences__c</referenceTo>
    <relationshipLabel>Linked General Preferences (To)</relationshipLabel>
    <relationshipName>Linked_General_Preferences_To</relationshipName>
    <type>Lookup</type>
</CustomField>