unpackaged/main/default/objects/Linked_General_Preference__c/validationRules/preventClone.validationRule-meta.xml
<ValidationRule>
    <fullName>preventClone</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.NoClone__c = TRUE,
ISCLONE() = TRUE 
)</errorConditionFormula>
    <errorMessage>You are not authorized to clone records.</errorMessage>
</ValidationRule>